# Raytracer

./: CMakeCache.txt  CMakeLists.txt  Makefile  Scene.cc  Scene.h  cmake_install.cmake  geometry.h  geometry.tcc  geometry_test  geometry_test.cc  math.h  math.tcc  math_test  math_test.cc  output.ppm  raytracer  raytracer.cc
